20200522. video 160 Login Google.

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,11 @@
     <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!--Custom JavaScript -->
     <script src="assets/js/custom.js"></script>
+
+    <!-- Google -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="19191691258-uv21242vkka92mhle6rdn6kl1u5p57g7.apps.googleusercontent.com">
+
 </body>
 
 </html>
